--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,18 @@ a {
 input {
   outline: none;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: white;
+}
+
